# FirstCookieCutterTemplate

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: README.md  pyproject.toml  requirements.txt  tasks.py
{{ cookiecutter.repo_name }}/.github/workflows/: docker.yml  lint.yml
{{ cookiecutter.repo_name }}/dockerfiles/: train.dockerfile
{{ cookiecutter.repo_name }}/src/: train.py
