[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = {{ cookiecutter.repo_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }}, email = "your@email.com" },
]
{% if cookiecutter.license != 'None' %}license = { file = "LICENSE" }{% endif %}
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
target-version = "{{ cookiecutter.python_version | replace('.', '') }}"

[tool.coverage.run]
omit = ["tests/*"]
